--- a/bestbuy css/navbar.css
+++ b/bestbuy css/navbar.css
@@ -32,7 +32,7 @@ form{
 #cart a:hover{
     text-decoration: underline;
 }
-#hr{
+.hr{
     width: 100%;
     height: 1px;
     background-color: rgb(40, 79, 252);
