--- a/bestbuy css/account.css
+++ b/bestbuy css/account.css
@@ -51,6 +51,10 @@ nav>div a {
     width: 330px;
     margin: auto;
 }
+#createAccount .para{
+font-size: 13px;
+text-align: left;
+}
 a:hover{
     text-decoration: underline;
 }
@@ -136,6 +140,8 @@ img {
 }
 #signIn{
     padding-bottom: 20px;
+    text-align: left;
+    /* font-size: px; */
     /* border: 1px solid blue; */
 }
 #footer{
