--- a/bestbuy css/home.css
+++ b/bestbuy css/home.css
@@ -36,7 +36,7 @@
     margin-left: 10px;
     margin-right: 10px;
 }
-.top-content i{
+#close1,#close2{
     font-size: 35px;
     background-color: white;
     margin-right: 10px;
@@ -74,7 +74,16 @@
     width: 90%;
     margin: auto;
 }
-.bottom-content button:hover{
+#buttonorder{
+    width: 300px;
+    height: 30px;
+    border: none;
+    border-radius: 4px;
+    background-color: blue;
+    color: white;
+    font-weight: bold;
+}
+#buttonorder:hover{
     background-color: rgb(15, 15, 180);
 }
 
