--- a/bestbuy css/gift-cart.css
+++ b/bestbuy css/gift-cart.css
@@ -20,15 +20,15 @@ html{
 }
 #cartA{
     display: flex;
-    width: 130rem;
+    width: 120rem;
     height: 22rem;
    
     gap: 5rem;
   
     border: .1rem solid black;
     background-color: #0046be;
-    padding-left: 16rem;
-   margin-left: 2rem;
+    padding-left: 13rem;
+   margin-left: 1.2rem;
     
 }
 #cartA>div>h1{
@@ -67,19 +67,19 @@ padding-top: 4rem;
 #line1{
 width: 111rem;
 border: .1rem solid grey;
-margin-left: 19rem;
+margin-left: 14rem;
 
 
 }
 .h31{
-margin-left: 17rem; 
+margin-left: 11rem; 
 font-size: 2.2rem;
 font-family: Arial, Helvetica, sans-serif;
 margin-top: 5rem;
 }
 #container{
 display: flex;
-margin-left: 20rem;
+margin-left: 14rem;
 margin-top: 3%;
 gap: 2%;
 }
@@ -110,18 +110,18 @@ p{
 #line2{
 width: 111rem;
 border: .1rem solid grey;
-margin-left: 19rem;
+margin-left: 14rem;
 margin-top: 0rem;
 }
 .h32{
-margin-left: 16.5rem; 
+margin-left: 11rem; 
 font-size: 2.2rem;
 font-family: Arial, Helvetica, sans-serif;
 
 }
 #container1{
 display: flex;
-margin-left: 22rem;
+margin-left: 19rem;
 gap: 12rem;
 }
 #container1>div{
@@ -159,12 +159,12 @@ margin-left: 4rem;
 width: 115.8rem;
 height: 8rem;
 border: .1rem solid black;
-margin-left: 17rem;
+margin-left: 14rem;
 margin-top: 9rem;
 }
 #container3{
 display: flex;
-margin-left: 17rem;
+margin-left: 14rem;
 }
 #same1{
 
@@ -226,7 +226,7 @@ font-size: 2.3rem;
 }
 #container4{
 display: flex;
-margin-left: 17.5rem;
+margin-left: 14rem;
 gap: 3rem;
 margin-top: 7rem;
 }
@@ -250,7 +250,7 @@ display: flex;
 width: 115rem;
 height: 16rem;
 border: .1rem solid black;
-margin-left: 17.8rem;
+margin-left: 14rem;
 margin-top: 3%;
 background-color: #001e73;
 }
@@ -284,7 +284,7 @@ font-size: 1.7rem;
 }
 
 #cont1{
-margin-left: 17.2rem;
+margin-left: 14rem;
 border: .1rem solid grey;
 width: 115.8rem;
 height: 6rem;
@@ -299,7 +299,7 @@ padding-left: 2rem;
 }
 #cont2{
 display: flex;
-margin-left: 17.2rem;
+margin-left: 14rem;
 width: 116rem;
 
 }
@@ -320,7 +320,7 @@ padding-left: 2rem;
 font-family: sans-serif;
 }
 h4{
-margin-left: 17rem;
+margin-left: 14rem;
 font-family: Arial, Helvetica, sans-serif;
  font-size: 1.4rem;
 }
@@ -332,115 +332,111 @@ font-family: Arial, Helvetica, sans-serif;
 #lastdiv{
 margin-top: -1.2%;
 width: 117rem;
-margin-left: 17rem;
+margin-left: 14rem;
 color: rgb(46, 44, 44);
 }
 #container6{
-height: 93rem;
-width: 150.5rem;
-background-color: #f0f2f4;
-margin-top: 18rem;
-}
-#container7{
-display: flex;
-justify-content: center;
-justify-content: space-around;
-} 
-#container7>div{
-width: 30rem;
-height: 15rem;
-
-margin-top: 5rem;
-}
-.imgtr{
-width: 6rem;
-height: 6rem;
-color: grey;
-margin-left: 9rem;
-}
-.anc22{
-text-decoration: none;
-padding-left: 4rem;
-color: #5057d1;
-font-weight: 600;
-}
-.anc23{
-text-decoration: none;
-padding-left: 0rem;
-color: #5057d1;
-font-weight: 600;
-}
-
-#line4{
-width: 142rem;
-border: .1rem solid grey;
-margin-left: 5rem;
-margin-top: -70rem;
-}
-#container8{
-display: flex;
-margin-left: 4.3rem;
-}
-#container8>div{
-
-width: 31rem;
-height: 50rem;
-font-family: Arial, Helvetica, sans-serif;
-}
-#container8>div>p{
-margin-left: 0rem;
-
-}
-#container8>div>h3{
-margin-left: -3rem;
-
-}
-#container8>div>p>a{
-text-decoration: none;
-font-size: 1.5rem;
-color: #5057d1;
-}
-#line5{
-  width: 142rem;
-border: .1rem solid grey;
-margin-left: 5rem;
-
-
-}
-#container10{
-display: flex;
-justify-content: space-between;
-width: 145rem;
-}
-#container10>div{
-display: flex;
-justify-content: space-between;
-margin-left: 4.8rem;
-
-
-}
-#container10>div>p>a{
-text-decoration: none;
-color: #5057d1;
-}
-#end{
-width: 125rem;
-display: flex;
-justify-content: space-evenly;
-font-size: 1.3rem;
-padding-top: 3rem;
-}  
-#end>a{
-text-decoration: none;
-color: #5057d1;
-}
-.lastpara{
-font-family: Arial, Helvetica, sans-serif;
-width: 140rem;
-font-size: 1.45rem;
-padding-left: 4rem;
-padding-top: 2rem;
-}
+  height: 93rem;
+  width: 134rem;
+  background-color: #f0f2f4;
+  margin-top: 18rem;
+  margin-left: 1rem;
+  }
+  #container7{
+  display: flex;
+  margin-left: 5rem;
+  justify-content: space-around;
+  } 
+  #container7>div{
+  width: 30rem;
+  height: 15rem;
+  
+  margin-top: 5rem;
+  }
+  .imgtr{
+  width: 6rem;
+  height: 6rem;
+  color: grey;
+  margin-left: 5rem;
+  }
+  .anc22{
+  text-decoration: none;
+  padding-left: 1.2rem;
+  font-size: 1.6rem;
+  font-weight: 600;
+  }
+  .anc23{
+  text-decoration: none;
+  margin-left: -1.2rem;
+  font-size: 1.6rem;
+  font-weight: 600;
+  }
+  #line4{
+  width: 128rem;
+  border: .1rem solid grey;
+  margin-left: 2rem;
+  margin-top: -70rem;
+  }
+  #container8{
+  display: flex;
+  margin-left: 4.3rem;
+  margin-top: -45rem;
+  line-height: 2rem;
+  }
+  #container8>div{
+  
+  width: 31rem;
+  height: 50rem;
+  font-family: Arial, Helvetica, sans-serif;
+  }
+  #container8>div>h3{
+    font-size: 1.7rem;
+   
+  }
+  #container8>div>p{
+  margin-left: 3rem;
+  
+  }
+  #container8>div>p>a{
+  text-decoration: none;
+  font-size: 1.5rem;
+  }
+  #line5{
+    width: 127rem;
+  border: .1rem solid grey;
+  margin: auto;
+  
+  }
+  #container10{
+  display: flex;
+  justify-content: space-between;
+  width: 128rem;
+  margin-left: 3.8rem;
+  }
+  #container10>div{
+  display: flex;
+  }
+  #container10>div>p>a{
+  text-decoration: none;
+  }
+  #end{
+  width: 130rem;
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 1.3rem;
+  padding-top: 3rem;
+  }  
+  #end>a{
+  text-decoration: none;
+  color: #5057d1;
+  }
+  .lastpara{
+  font-family: Arial, Helvetica, sans-serif;
+  width: 120rem;
+  font-size: 1.45rem;
+  padding-left: 4rem;
+  padding-top: 2rem;
+  }
 #mob{
 display: flex;
 gap: 2rem;
@@ -450,6 +446,106 @@ gap: 2rem;
   padding-left: 8rem;
   margin-top: 10rem;
 }
+#container15>div{
+  
+  width: 40rem;
+  height: 44rem;
+  margin-left: 100rem;
+  margin-top: 2rem;
+  background-color: #ffffff;
+  padding-top: 2rem;
+}
+#container15>div{
+    
+  width: 40rem;
+  height: 44rem;
+  margin-left: 92rem;
+  margin-top: 2rem;
+  background-color: #ffffff;
+  padding-top: 2rem;
+}
+#container15>div>a{
+font-size: 1.5rem;
+text-decoration: none;
+font-family: Arial, Helvetica, sans-serif;
+margin-left: 2rem;
+color: #5057d1;
+}
+#imgok{
+display: flex;
+justify-content: space-evenly;
+}
+#imgok>img{
+height: 3.3rem;
+width: 3.3rem;
+margin-top: 2rem;
+}
+#lineos{
+border: .1rem solid grey;
+width: 36rem;
+margin-left: 2rem;
+margin-top: 2rem;
+}
+#lineok{
+border: .1rem solid grey;
+width: 36rem;
+margin-left: 2rem;
+margin-top: 2rem;
+margin-bottom: 2rem;
+}
+#lineoq{
+border: .1rem solid grey;
+width: 36rem;
+margin-left: 2rem;
+margin-top: 3.5rem;
+}
+#lineop{
+border: .1rem solid grey;
+width: 36rem;
+margin-left: 2rem;
+margin-top: 2rem;
+}
+#signh3{
+font-size: 2rem;
+margin-left: 2rem;
+font-weight: 600;
+font-family: Arial, Helvetica, sans-serif;
+}
+input{
+height: 3rem;
+width: 20rem;
+margin-left: 2rem;
+border-radius: .5rem;
+font-size: 1.5rem;
+}
+#singh3>input>button{
+height: 22rem;
+}
+#imgh1234{
+width:5.2rem;
+margin-left: 2rem;
+
+}
+#imgh123{
+display: flex;
+line-height: 0rem;
+}
+#imgh123>div{
+margin-top: 2rem;
+
+}
+#imgh123>div>h2{
+font-size: 2.3rem;
+font-family: Arial, Helvetica, sans-serif;
+}
+#imgh123>div>a{
+font-size: 1.5rem;
+font-family: Arial, Helvetica, sans-serif;
+font-weight: 600;
+color: #5057d1;
+text-decoration: none;
+}
+
 @media(max-width:998px){
   html{
     font-size: 55%;
